# Stock-Analysis-and-Realtime-Trading-Signals-Application

./: .gitignore  .replit  README.md  pyproject.toml
attached_assets/: final_app.py  index.html  login.py  run_app.py  server.py  simple_stock_analysis.py  socket_server.py  socketio_bridge.py
client/: package.json
client/public/: index.html
client/src/: App.js  index.js
client/src/components/: Header.js  NotificationBar.js  PricePrediction.js  StockOverview.js  StockSearch.js  TechnicalAnalysis.js  TradingSignals.js
client/src/context/: AuthContext.js  SocketContext.js
client/src/services/: authService.js  stockService.js
data/: users.pkl
server/: package.json  server.js
server/config/: db.js
server/controllers/: stockController.js
server/middleware/: auth.js
server/models/: Stock.js  User.js
server/python/: stockAnalysis.py
server/routes/: api.js  auth.js
server/services/: socketService.js  stockAnalysis.js
server/utils/: analysisUtils.js  yahooFinance.js
server/websocket/: stock_socket_server.py
